--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,15 @@ body
     background-color: #000026;
 }
 
-h1  
+h3  
 {
-    color: white;
+    color: whitesmoke;
 }
 
+a
+{
+    color: red;
+}
 .inner-div 
 {
     color: white;
@@ -54,5 +58,5 @@ canvas
    width: 500px;
   display: flex;
   justify-content: center;
-  padding: 10px;
+  padding: 1px;
 }
